Update table endpoints using the newest standard
